devops-assignment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-demo-api
  template:
    metadata:
      labels:
        app: devops-demo-api
    spec:
      containers:
      - name: devops-demo-api
        image: dockerizzz/devops-demo-api:latest
        ports:
        - containerPort: 3000
